--- a/ForBiz.Web/Views/Home/_Menu.cshtml
+++ b/ForBiz.Web/Views/Home/_Menu.cshtml
@@ -5,7 +5,7 @@
                 <div class="col-xs-6 col-md-2 col-lg-3 logo-box">
                     <div class="logo">
                         <a href="index.html">
-                            <img src="img/logo.svg" class="logo-img" alt="">
+                            <img src="~/img/logo4biz.png" class="logo-img" alt="">
                         </a>
                     </div>
                 </div><!-- .logo-box -->
