--- a/trunk/ForBiz.Web/Views/Home/Index.cshtml
+++ b/trunk/ForBiz.Web/Views/Home/Index.cshtml
@@ -513,20 +513,21 @@
                     <div class="title-box text-center title-white" data-appear-animation="fadeInDown">
                         <h2 class="h1 title">Dịch vụ</h2>
                     </div>
+                    <p class="text-center white">4biz hân hạnh cung cấp những dịch vụ chất lượng cao, hỗ trợ đắc lực cho việc kinh doanh của bạn.</p>
                     <div class="row services white">
                         <div class="service col-sm-4 col-md-4" data-appear-animation="bounceInDown">
                             <a href="#">
-                                <div class="icon border border-error">
-                                    <div class="livicon" data-n="responsive" data-s="42" data-c="#c10841" data-hc="0" data-d="1600"></div>
+                                <div class="icon border">
+                                    <div class="livicon" data-n="responsive" data-s="42" data-c="#fff" data-hc="0" data-d="1600"></div>
                                 </div>
-                                <h6 class="title">Xây dựng Web</h6>
-                                <div class="text-small">Với thiết kế Reponsive, hiển thị tốt trên tất cả kích cỡ màn hình.</div>
+                                <h6 class="title">Xây dựng ứng dụng Web</h6>
+                                <div class="text-small">Các ứng dụng như quản lý kho, nhân sự, thu chi, nhập xuất hàng... nay đã có thể thực hiện online hay các website thương mại điện tử, giới thiệu doanh nghiệp... Giúp bạn tiết kiệm thời gian, chi phí và có thể kiểm soát cả hệ thống dù ở bất cứ đâu với thiết kế Reponsive.</div>
                             </a>
                         </div>
                         <div class="service col-sm-4 col-md-4" data-appear-animation="bounceInUp">
                             <a href="#">
-                                <div class="icon border border-error">
-                                    <div class="livicon" data-n="globe" data-s="42" data-c="#c10841" data-hc="0"></div>
+                                <div class="icon border">
+                                    <div class="livicon" data-n="globe" data-s="42" data-c="#fff" data-hc="0"></div>
                                 </div>
                                 <h6 class="title">SEO - Tối ưu tìm kiếm</h6>
                                 <div class="text-small">Với giải pháp trọn gói bao gồm: Tối ưu nội dung, mạng xã hội, email,...</div>
@@ -534,8 +535,8 @@
                         </div>
                         <div class="service col-sm-4 col-md-4" data-appear-animation="bounceInLeft">
                             <a href="#">
-                                <div class="icon border border-error">
-                                    <div class="livicon" data-n="cellphone" data-s="42" data-c="#c10841" data-hc="0"></div>
+                                <div class="icon border">
+                                    <div class="livicon" data-n="cellphone" data-s="42" data-c="#fff" data-hc="0"></div>
                                 </div>
                                 <h6 class="title">Xây dựng ứng dụng di động</h6>
                                 <div class="text-small">Chạy trên tất cả nền tảng. Cung cấp cả 2 giải pháp Native và Cross-platform.</div>
@@ -544,8 +545,8 @@
                         <div class="clearfix"></div>
                         <div class="service col-sm-4 col-md-4" data-appear-animation="bounceInLeft">
                             <a href="#">
-                                <div class="icon border border-error">
-                                    <div class="livicon" data-n="bug" data-s="42" data-c="#c10841" data-hc="0"></div>
+                                <div class="icon border">
+                                    <div class="livicon" data-n="bug" data-s="42" data-c="#fff" data-hc="0"></div>
                                 </div>
                                 <h6 class="title">Bảo trì sản phẩm sẵn có</h6>
                                 <div class="text-small">Hỗ trợ bảo trì và phát triển ứng dụng Web hoặc Di động sẵn có.</div>
@@ -553,8 +554,8 @@
                         </div>
                         <div class="service col-sm-4 col-md-4" data-appear-animation="bounceInDown">
                             <a href="#">
-                                <div class="icon border border-error">
-                                    <div class="livicon" data-n="brush" data-s="42" data-c="#c10841" data-hc="0"></div>
+                                <div class="icon border">
+                                    <div class="livicon" data-n="brush" data-s="42" data-c="#fff" data-hc="0"></div>
                                 </div>
                                 <h6 class="title">Nhận dạng thương hiệu</h6>
                                 <div class="text-small">Thiết kế logo, banner, poster với bộ nhận dạng thương hiệu riêng biệt.</div>
@@ -562,8 +563,8 @@
                         </div>
                         <div class="service col-sm-4 col-md-4" data-appear-animation="bounceInUp">
                             <a href="#">
-                                <div class="icon border border-error">
-                                    <div class="livicon" data-n="piggybank" data-s="42" data-c="#c10841" data-hc="0" data-d="1600"></div>
+                                <div class="icon border">
+                                    <div class="livicon" data-n="piggybank" data-s="42" data-c="#fff" data-hc="0" data-d="1600"></div>
                                 </div>
                                 <h6 class="title">Tư vấn miễn phí</h6>
                                 <div class="text-small">Giải pháp ứng dụng công nghệ cho ý tưởng kinh doanh của bạn.</div>
@@ -578,7 +579,7 @@
             <div class="container">
                 <div class="bottom-padding">
                     <div class="title-box text-center" data-appear-animation="fadeInDown">
-                        <h1 class="title">Con đường tới thành công</h1>
+                        <h1 class="title">Con đường thành công</h1>
                     </div>
 
                     <div class="steps" data-appear-animation="fadeIn">
@@ -636,81 +637,128 @@
                 </div>
             </div>
         </section>
-            <div class="full-width-box bottom-padding">
-                <div class="fwb-bg fwb-fixed band-12"><div class="overlay"></div></div>
+        <section id="projects">
+            <div class="full-width-box bottom-padding cm-padding-bottom-36">
+                <div class="fwb-bg fwb-paralax band-6" data-stellar-background-ratio="0.5"><div class="overlay"></div></div>
 
                 <div class="container">
-                    <div class="row">
-                        <div class="carousel-box load" data-carousel-pagination="true" data-carousel-nav="false" data-carousel-autoplay="true">
+                    <div class="portfolio">
+                        <div class="btn-group filter-buttons filter-list white">
+                            <button type="button" class="dropdown-toggle" data-toggle="dropdown">
+                                All works <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu" role="menu">
+                                <li><a href="#" data-filter="*" class="active">Tất cả</a></li>
+                                <li><a href="#" data-filter=".introduction">Giới thiệu</a></li>
+                                <li><a href="#" data-filter=".ecommerce">Thương mại điện tử</a></li>
+                                <li><a href="#" data-filter=".mobile">Ứng dụng di động</a></li>
+                            </ul>
                             <div class="clearfix"></div>
+                        </div><!-- .filter-buttons -->
 
-                            <div class="row">
-                                <div class="carousel no-responsive">
-                                    <div class="col-sm-3 col-md-3">
-                                        <a href="portfolio-single.html" class="work">
-                                            <img src="img/content/portfolio-1-270.jpg" class="replace-2x" width="370" height="270" alt="">
-                                            <span class="shadow"></span>
-                                            <div class="bg-hover"></div>
-                                            <div class="work-title">
-                                                <h3 class="title">Morbi non lacus ac sapien molestie</h3>
-                                                <div class="description">Web design</div>
-                                            </div>
-                                        </a>
+                        <div class="clearfix"></div>
+
+                        <div class="row filter-elements">
+                            <div class="work-element ecommerce col-xs-12 col-sm-3 col-md-3">
+                                <a href="portfolio-single.html" class="work">
+                                    <img src="~/img/content/projects/smart-health-avatar.png" width="270" height="197" alt="">
+                                    <span class="shadow"></span>
+                                    <div class="bg-hover"></div>
+                                    <div class="work-title">
+                                        <h3 class="title">Smart Health</h3>
+                                        <div class="description">Thương mại điện tử</div>
                                     </div>
-                                    <div class="col-sm-3 col-md-3">
-                                        <a href="portfolio-single.html" class="work">
-                                            <img src="img/content/portfolio-2-270.jpg" class="replace-2x" width="370" height="270" alt="">
-                                            <span class="shadow"></span>
-                                            <div class="bg-hover"></div>
-                                            <div class="work-title">
-                                                <h3 class="title">Morbi non lacus ac sapien molestie</h3>
-                                                <div class="description">Web design</div>
-                                            </div>
-                                        </a>
+                                </a>
+                            </div><!-- .work-element -->
+
+                            <div class="work-element introduction col-xs-12 col-sm-3 col-md-3">
+                                <a href="portfolio-single.html" class="work">
+                                    <img src="~/img/content/projects/au-co-bien-hoa-avatar.png" width="270" height="197" alt="">
+                                    <span class="shadow"></span>
+                                    <div class="bg-hover"></div>
+                                    <div class="work-title">
+                                        <h3 class="title">Bệnh viện Âu Cơ Biên Hòa</h3>
+                                        <div class="description">Giới thiệu</div>
                                     </div>
-                                    <div class="col-sm-3 col-md-3">
-                                        <a href="portfolio-single.html" class="work">
-                                            <img src="img/content/portfolio-3-270.jpg" class="replace-2x" width="370" height="270" alt="">
-                                            <span class="shadow"></span>
-                                            <div class="bg-hover"></div>
-                                            <div class="work-title">
-                                                <h3 class="title">Morbi non lacus ac sapien molestie</h3>
-                                                <div class="description">Web design</div>
-                                            </div>
-                                        </a>
+                                </a>
+                            </div><!-- .work-element -->
+
+                            <div class="work-element introduction col-xs-12 col-sm-3 col-md-3">
+                                <a href="portfolio-single.html" class="work">
+                                    <img src="~/img/content/projects/vay-365-avatar.png" width="270" height="197" alt="">
+                                    <span class="shadow"></span>
+                                    <div class="bg-hover"></div>
+                                    <div class="work-title">
+                                        <h3 class="title">Vay 365</h3>
+                                        <div class="description">Giới thiệu</div>
                                     </div>
-                                    <div class="col-sm-3 col-md-3">
-                                        <a href="portfolio-single.html" class="work">
-                                            <img src="img/content/portfolio-4-270.jpg" class="replace-2x" width="370" height="270" alt="">
-                                            <span class="shadow"></span>
-                                            <div class="bg-hover"></div>
-                                            <div class="work-title">
-                                                <h3 class="title">Morbi non lacus ac sapien molestie</h3>
-                                                <div class="description">Web design</div>
-                                            </div>
-                                        </a>
+                                </a>
+                            </div><!-- .work-element -->
+
+                            <div class="work-element ecommerce col-xs-12 col-sm-3 col-md-3">
+                                <a href="portfolio-single.html" class="work">
+                                    <img src="~/img/content/projects/dong-phuc-viet-anh-avatar.png" width="270" height="197" alt="">
+                                    <span class="shadow"></span>
+                                    <div class="bg-hover"></div>
+                                    <div class="work-title">
+                                        <h3 class="title">Đồng phục Việt Anh</h3>
+                                        <div class="description">Thương mại điện tử</div>
                                     </div>
-                                    <div class="col-sm-3 col-md-3">
-                                        <a href="portfolio-single.html" class="work">
-                                            <img src="img/content/portfolio-5-270.jpg" class="replace-2x" width="370" height="270" alt="">
-                                            <span class="shadow"></span>
-                                            <div class="bg-hover"></div>
-                                            <div class="work-title">
-                                                <h3 class="title">Morbi non lacus ac sapien molestie</h3>
-                                                <div class="description">Web design</div>
-                                            </div>
-                                        </a>
+                                </a>
+                            </div><!-- .work-element -->
+
+                            <div class="work-element ecommerce col-xs-12 col-sm-3 col-md-3">
+                                <a href="portfolio-single.html" class="work">
+                                    <img src="~/img/content/projects/kim-bien-market-avatar.png" width="270" height="197" alt="">
+                                    <span class="shadow"></span>
+                                    <div class="bg-hover"></div>
+                                    <div class="work-title">
+                                        <h3 class="title">Kim Biên Market</h3>
+                                        <div class="description">Thương mại điện tử</div>
                                     </div>
-                                </div>
-                            </div>
-                            <div>
-                                <div class="pagination switches"></div>
-                            </div>
+                                </a>
+                            </div><!-- .work-element -->
+
+                            <div class="work-element introduction col-xs-12 col-sm-3 col-md-3">
+                                <a href="portfolio-single.html" class="work">
+                                    <img src="~/img/content/projects/smart-salt-avatar.png" width="270" height="197" alt="">
+                                    <span class="shadow"></span>
+                                    <div class="bg-hover"></div>
+                                    <div class="work-title">
+                                        <h3 class="title">Smart Salt</h3>
+                                        <div class="description">Giới thiệu</div>
+                                    </div>
+                                </a>
+                            </div><!-- .work-element -->
+
+                            <div class="work-element introduction col-xs-12 col-sm-3 col-md-3">
+                                <a href="portfolio-single.html" class="work">
+                                    <img src="~/img/content/projects/conceive-plus-avatar.png" width="270" height="197" alt="">
+                                    <span class="shadow"></span>
+                                    <div class="bg-hover"></div>
+                                    <div class="work-title">
+                                        <h3 class="title">Conceive Plus</h3>
+                                        <div class="description">Giới thiệu</div>
+                                    </div>
+                                </a>
+                            </div><!-- .work-element -->
+
+                            <div class="work-element mobile col-xs-12 col-sm-3 col-md-3">
+                                <a href="portfolio-single.html" class="work">
+                                    <img src="~/img/content/projects/one-piece-app-avatar.png" width="270" height="197" alt="">
+                                    <span class="shadow"></span>
+                                    <div class="bg-hover"></div>
+                                    <div class="work-title">
+                                        <h3 class="title">One Piece App</h3>
+                                        <div class="description">Ứng dụng di động</div>
+                                    </div>
+                                </a>
+                            </div><!-- .work-element -->
                         </div>
                     </div>
                 </div>
             </div><!-- .full-width-box -->
-
+        </section>
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12 col-md-6 promo-partners bottom-padding">
