--- a/ForBiz.Web/Views/Home/_Menu.cshtml
+++ b/ForBiz.Web/Views/Home/_Menu.cshtml
@@ -9,18 +9,13 @@
 
         <nav class="collapse collapsing navbar-collapse">
             <ul class="nav navbar-nav navbar-center">
-                <li class="parent">
-                    <a class="scroll active" href="#home">Home</a>
-                    <ul class="sub">
-                        <li><a href="index.html">Multi Page Site</a></li>
-                        <li><a href="index-one-page.html">One Page Site</a></li>
-                    </ul>
-                </li>
+                <li><a class="scroll active" href="#home">Trang chủ</a></li>
                 <li><a class="scroll" href="#services">Dịch vụ</a></li>
                 <li><a class="scroll" href="#workflow">Con đường thành công</a></li>
                 <li><a class="scroll" href="#projects">Dự án thực tế</a></li>
-                <li><a class="scroll" href="#team">Team</a></li>
-                <li><a class="scroll" href="#contact-us">Contact Us</a></li>
+                <li><a class="scroll" href="#clients">Khách hàng</a></li>
+                <li><a class="scroll" href="#team">Chúng tôi là ai</a></li>
+                <li><a class="scroll" href="#contact-us">Liên hệ</a></li>
 
             </ul>
         </nav>
