update text home page

--- a/ForBiz.Web/Views/Home/Index.cshtml
+++ b/ForBiz.Web/Views/Home/Index.cshtml
@@ -834,7 +834,7 @@
 
                 <div class="container">
                     <div class="title-box text-center title-white">
-                        <h1 class="title">Khác hàng nói gì !?</h1>
+                        <h1 class="title">Khách hàng nói gì !?</h1>
                     </div>
 
                     <div class="respond-carousel">
@@ -904,35 +904,35 @@
                 </div>
                 <div class="row">
                     <div class="col-sm-6 col-md-6 bottom-padding">
-                        <p class="lead"><strong>Trả qua nhiều năm làm việc và cống hiến cho những công ty Công nghệ hàng đầu việc nam. Chúng tôi tự tin và khát vọng xây dựng ước mơ cho riêng mình.</strong></p>
-                        <p>4biz ra đời trước xu thế bùng nổ thương mại điện tử toàn cầu. Với mong muốn mang tất cả kinh nghiệm làm việc với những hiện thống lớn, dữ liệu phức tạp, thiết kế hướng người dùng,... chúng tôi hân hạnh mang đến những giải pháp công nghệ hiện đại nhất, ổn định nhất và hiệu quả nhất cho ý tưởng kinh doanh của bạn.</p>
-                        <p>Bằng tất cả tâm huyết của người làm nghề, chúng tôi luôn xem những sản phẩm tạo ra là con đẻ của mình. Chăm sóc và hoàn thiện chúng một cách hoàn hảo nhất. Tất cả vì thương hiệu 4biz.vn!</p>
+                        <p class="lead"><strong>Trải qua nhiều năm làm việc và cống hiến tại những công ty Công nghệ hàng đầu Việt Nam. Chúng tôi tự tin và khát vọng xây dựng ước mơ cho riêng mình.</strong></p>
+                        <p><strong>4biz</strong> ra đời trước xu thế bùng nổ thương mại điện tử toàn cầu. Với kinh nghiệm có được từ những hệ thống lớn (mạng xã hội của <strong>Walmart</strong> ...), dữ liệu phức tạp (hệ thống thông tin về health-care của <strong>Hellodoctor, FolUp</strong>...), thiết kế hướng người dùng (landing page của hệ thống <strong>P&G EverydayMe</strong>),... chúng tôi tự tin mang đến những giải pháp công nghệ hiện đại nhất, độ ổn định cao, giao diện người dùng thân thiện, phù hợp với mọi ý tưởng kinh doanh của bạn.</p>
+                        <p>Với ước mơ làm nâng tầm các sản phẩm công nghệ thông tin tại Việt Nam, chúng tôi luôn đặt hết tâm huyết vào tất cả sản phẩm mà <strong>4biz</strong> làm ra, chăm sóc và hoàn thiện chúng nhằm mang đến cho khách hàng những giải pháp hoàn hảo nhất. <strong>4biz, tất cả vì thành công của khách hàng.</strong></p>
                         <a href="#" class="btn btn-default">Xem thêm</a>
                     </div>
 
                     <div class="col-sm-6 col-md-6 bottom-padding">
-                        <div class="progress border-radius hover" data-appear-progress-animation="90%">
-                            <div class="progress-bar progress-bar-info">Kinh nghiệm xây dựng ứng dụng Web 90%</div>
+                        <div class="progress border-radius hover" data-appear-progress-animation="100%">
+                            <div class="progress-bar progress-bar-info">90% website được thiết kế Responsive</div>
                         </div>
 
-                        <div class="progress border-radius" data-appear-progress-animation="80%">
-                            <div class="progress-bar progress-bar-success">Kinh nghiệm làm SEO 80%</div>
+                        <div class="progress border-radius" data-appear-progress-animation="100%">
+                            <div class="progress-bar progress-bar-success">80% website được SEO ngay từ ban đầu</div>
                         </div>
 
-                        <div class="progress border-radius" data-appear-progress-animation="60%">
-                            <div class="progress-bar progress-bar-info">Kinh nghiệp xây dựng Ứng dụng di động 70%</div>
+                        <div class="progress border-radius" data-appear-progress-animation="100%">
+                            <div class="progress-bar progress-bar-info">20% ứng dụng có phiên bản dành riêng cho Mobile</div>
                         </div>
 
-                        <div class="progress border-radius" data-appear-progress-animation="85%">
-                            <div class="progress-bar progress-bar-warning">Kinh nghiệm bảo trì sản phẩm sẵn có 85%</div>
+                        <div class="progress border-radius" data-appear-progress-animation="100%">
+                            <div class="progress-bar progress-bar-warning">5 năm kinh nghiệm trong việc bảo trì các website có sẵn</div>
                         </div>
 
-                        <div class="progress border-radius" data-appear-progress-animation="60%">
-                            <div class="progress-bar progress-bar-danger">Kinh nghiệm tạo Bộ nhận dạng thương hiệu 60%</div>
+                        <div class="progress border-radius" data-appear-progress-animation="100%">
+                            <div class="progress-bar progress-bar-danger">60% dự án có xây dựng Bộ nhận dạng thương hiệu </div>
                         </div>
 
-                        <div class="progress border-radius" data-appear-progress-animation="75%">
-                            <div class="progress-bar progress-bar-success">Kinh nghiệm xâu dựng Ứng dụng ERP 75%</div>
+                        <div class="progress border-radius" data-appear-progress-animation="100%">
+                            <div class="progress-bar progress-bar-success">Hoàn thành & triển khai thành công 1 dự án ERP</div>
                         </div>
                     </div><!-- .employee -->
                 </div>
