update text home page

--- a/ForBiz.Web/Views/Home/Index.cshtml
+++ b/ForBiz.Web/Views/Home/Index.cshtml
@@ -844,48 +844,18 @@
                                     <div class="respond respond-blockquote border white col-sm-12 col-md-12">
                                         <div class="description border-white">
                                             <blockquote>
-                                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis at sit iure accusamus repellendus ut minus explicabo delectus et culpa quisquam voluptatum dolorum. Repudiandae recusandae voluptatum autem odit eos blanditiis omnis laudantium cupiditate modi aliquid a aut quibusdam aspernatur voluptates ipsam officiis sint nemo delectus dicta veritatis assumenda accusamus eius.
+                                                Là khách hàng mới của www.4biz.vn, tôi đến với 4biz.vn qua giới thiệu của bạn bè, với mong muốn rằng mình sẽ được tư vấn và thiết kế trang web kinh doanh online với giao diện thân thiện người sử dụng, hướng tới những người không "rành" về vi tính cũng có thể vào mua hàng dễ dàng.
+                                                Được tư vấn bởi đội ngũ nhân viên thiết kế chuyên nghiệp, website của tôi (www.kimbienmarket.com) đã hoàn thành và ra mắt ngày 16/9/2015, với giao diện đơn giản dễ sử dụng đối với người dùng, dễ quản trị đối với tôi (chủ website)
+                                                Trong quá trình quản trị website, tôi được hỗ trợ rất nhiều bởi nhân viên của 4biz.vn, hiệu chỉnh tối ưu website www.kimbienmarket.com, tôi đánh giá rất cao về việc hỗ trợ của 4biz.vn.
                                             </blockquote>
                                         </div>
                                         <div class="name">
                                             <div class="icon">
-                                                <img class="img-circle" src="img/content/avatar-1.jpg" alt="">
+                                                <img class="img-circle" src="~/img/content/clients/kim-bien-market-admin.png" alt="">
                                             </div>
 
-                                            <strong>John Doe</strong>
-                                            <div>Designer, Infostyle</div>
-                                        </div>
-                                    </div>
-
-                                    <div class="respond respond-blockquote border white col-sm-12 col-md-12">
-                                        <div class="description border-white">
-                                            <blockquote>
-                                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil unde a cumque sequi omnis eligendi odio vero magnam veritatis aliquid ab nesciunt dignissimos distinctio earum est veniam impedit quod qui eveniet tempore nostrum maxime aliquam dolore voluptates tenetur repudiandae ut dolor debitis mollitia amet labore voluptatibus dolorum eius tempora.
-                                            </blockquote>
-                                        </div>
-                                        <div class="name">
-                                            <div class="icon">
-                                                <img class="img-circle" src="img/content/avatar-2.jpg" alt="">
-                                            </div>
-
-                                            <strong>Derek Smitt</strong>
-                                            <div>Director, Infostyle</div>
-                                        </div>
-                                    </div>
-
-                                    <div class="respond respond-blockquote border white col-sm-12 col-md-12">
-                                        <div class="description border-white">
-                                            <blockquote>
-                                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi non magnam hic quos odio tenetur cumque enim provident repellat quibusdam vero velit accusantium fuga praesentium dolorum ullam quasi et quia dolore molestiae earum ipsum veniam eius sit nihil inventore necessitatibus dicta exercitationem ipsam voluptates. Ullam ipsa quo commodi.
-                                            </blockquote>
-                                        </div>
-                                        <div class="name">
-                                            <div class="icon">
-                                                <img class="img-circle" src="img/content/avatar-1.jpg" alt="">
-                                            </div>
-
-                                            <strong>John Doe</strong>
-                                            <div>Designer, Infostyle</div>
+                                            <strong>Phạm Duy Sỹ</strong>
+                                            <div>Co-Founder of KiembienMarket.come</div>
                                         </div>
                                     </div>
                                 </div>
